[#787] Additional dark mode fixes

--- a/styles/actor/ability-assignment-dialog.css
+++ b/styles/actor/ability-assignment-dialog.css
@@ -153,7 +153,7 @@
 				border: 1px solid black;
 				border-radius: 3px;
 				background-color: var(--bf-blue);
-				box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.5);
+				box-shadow: 0 0 0 1px var(--bf-background-color-half-white);
 
 				&.spent {
 					background-color: color-mix(in oklab, var(--bf-blue), white 50%);
