--- a/styles/application.css
+++ b/styles/application.css
@@ -43,7 +43,10 @@
 }
 
 .theme-dark .black-flag.application {
+	--bf-background-color-white: rgb(0 0 0);
+	--bf-background-color-half-white: rgb(0 0 0 / 0.5);
 	--bf-color-border-blue: color-mix(in oklab, var(--bf-blue), #89d3ff 25%);
+	--bf-text-color-blue: color-mix(in oklab, var(--bf-blue), #89d3ff 25%);
 
 	.hint {
 		color: var(--color-text-light-secondary);
