--- a/styles/dice/roll-dialog.css
+++ b/styles/dice/roll-dialog.css
@@ -13,7 +13,7 @@
 			margin-inline: calc(-0.5rem - 2px);
 			padding-block: 0.25rem;
 			padding-inline: 0.5rem;
-			background: rgba(255 255 255 / 0.5);
+			background: var(--bf-background-color-half-white);
 			font-size: var(--font-size-16);
 			text-align: center;
 
