--- a/styles/item/concept.css
+++ b/styles/item/concept.css
@@ -207,7 +207,7 @@
 				.editor-container {
 					min-height: 6em;
 					margin: 0;
-					background-color: rgba(255, 255, 255, 0.5);
+					background-color: var(--bf-background-color-half-white);
 					border-bottom-radius: 5px;
 
 					.editor-content {
